fix: tighter paragraph spacing and left-align toolbar
- Reduce margin-top from 0.5em to 0.25em
- Reduce line-height from 1.5 to 1.4
- Remove leading Spacer to left-justify toolbar

--- a/src/components/tiptap-node/paragraph-node/paragraph-node.scss
+++ b/src/components/tiptap-node/paragraph-node/paragraph-node.scss
@@ -36,9 +36,9 @@
   // Paragraph spacing
   p:not(:first-child):not(td p):not(th p) {
     font-size: 1rem;
-    line-height: 1.5;
+    line-height: 1.4;
     font-weight: normal;
-    margin-top: 0.5em;
+    margin-top: 0.25em;
   }
 
   // Selection styles
